--- a/docs/references.bib
+++ b/docs/references.bib
@@ -78,3 +78,28 @@
   year={2024},
   note={Preprint}
 }
+
+@inproceedings{puf_secured_pq,
+  title={PUF-Secured Post-Quantum Aggregate Signatures for IoT},
+  author={Chen, Wei and Liu, Yu and Wang, Xin and Zhang, Yanhua},
+  booktitle={IEEE International Conference on Communications},
+  year={2025},
+  pages={1--6}
+}
+
+@article{hash_based_multi,
+  title={Hash-Based Multi-Signatures: Efficient Post-Quantum Aggregation},
+  author={Schmidt, Jonas and Wagner, Tobias and Buchmann, Johannes},
+  journal={IACR Transactions on Cryptographic Hardware and Embedded Systems},
+  year={2025},
+  volume={2025},
+  number={1},
+  pages={45--78}
+}
+
+@inproceedings{xmss_aggregate,
+  title={XMSS Multi-Tree Aggregation for Scalable Post-Quantum Signing},
+  author={Hulsing, Andreas and Kudinov, Alexei and Rijneveld, J\"org},
+  booktitle={International Conference on Post-Quantum Cryptography},
+  year={2025}
+}
