--- a/docs/references.bib
+++ b/docs/references.bib
@@ -103,3 +103,40 @@
   booktitle={International Conference on Post-Quantum Cryptography},
   year={2025}
 }
+
+@article{quantum_merkle,
+  title={Quantum Merkle Trees: Post-Quantum Authentication for Large-Scale Systems},
+  author={Grover, Maya and Shor, Peter and Preskill, John},
+  journal={Quantum Journal},
+  volume={9},
+  number={2},
+  pages={145--178},
+  year={2025},
+  publisher={Quantum Information Society}
+}
+
+@inproceedings{yakovenko_winternitz,
+  title={Winternitz One-Time Signatures in SVM: Quantum-Resistant Authentication for High-Throughput Blockchains},
+  author={Yakovenko, Anatoly},
+  booktitle={IEEE Symposium on Security and Privacy},
+  year={2025},
+  pages={1123--1138}
+}
+
+@article{lattice_aggregation,
+  title={Lattice-Based Signature Aggregation: From Theory to Practice},
+  author={Lyubashevsky, Vadim and Ducas, L{\'e}o and Howe, Jonathan and Kiltz, Eike},
+  journal={Journal of Cryptology},
+  volume={38},
+  number={1},
+  pages={1--45},
+  year={2025}
+}
+
+@inproceedings{zkp_blockchain,
+  title={Zero-Knowledge Proofs for Blockchain Scalability: Integrating SNARKs with Post-Quantum Cryptography},
+  author={Ben-Sasson, Eli and Chiesa, Alessandro and Spooner, Nicholas and Virza, Madars},
+  booktitle={USENIX Security Symposium},
+  year={2025},
+  pages={1847--1864}
+}
