docs: Professional author attribution and ethical acknowledgments
- Update author block: J. Casey Wilson, Independent Researcher, Odenrider Group LLC
- Revise Acknowledgments: Ethically credit AI assistance (Grok for brainstorming/code sketches) while emphasizing manual verification and hands-on mining/cybersecurity experience
- Add broader impact statement: Draw from practical mining experience since 2020, addressing PoW chain scalability needs and quantum threat opportunities
- Maintain academic integrity: Transparent AI disclosure per ACM guidelines, personal motivation without compromising professionalism
- Position as independent research from experienced practitioner in cryptocurrency ecosystems

--- a/docs/academic_paper.tex
+++ b/docs/academic_paper.tex
@@ -36,10 +36,9 @@
 \title{PAT: Post-Quantum Signature Aggregation at Scale \\
 \large First Large-Scale Implementation with Testnet Validation}
 
-\author[1]{Dogecoin Core Research Team}
-\author[2]{Academic Collaborators}
-\affil[1]{Dogecoin Foundation, Open Source}
-\affil[2]{Cryptography Research Institutions}
+\author[1]{J. Casey Wilson \\
+Independent Researcher \\
+\affil[1]{Odenrider Group LLC}}
 
 \date{\today}
 
@@ -73,6 +72,8 @@ We introduce PAT (Paw Aggregation Technique), combining Dilithium with logarithm
     \item \textbf{Efficiency:} 96 signatures/second, 80\% energy reduction
     \item \textbf{Interoperability:} Cross-chain deployment (Dogecoin, Litecoin, Solana)
 \end{itemize}
+
+Drawing from practical experience deploying script algorithm miners since 2020, this research addresses real-world scalability needs in PoW chains—turning quantum threats into opportunities for advancing the resilience of cryptocurrency ecosystems.
 
 \subsection{Contributions}
 \label{subsec:contributions}
@@ -717,7 +718,7 @@ As a U.S. Air Force veteran and Dogecoin miner since 2020, this work draws from 
 \section*{Acknowledgments}
 \label{sec:acknowledgments}
 
-We thank the Dogecoin community for supporting this research and the academic cryptography community for foundational work in signature aggregation and post-quantum cryptography.
+This work builds on open-source contributions from the Dogecoin Core community and NIST standards. Assistance from AI tools (e.g., Grok for initial brainstorming and code sketches) was used, but all implementations, benchmarks, and analyses were manually verified and refined based on the author's mining and cybersecurity knowledge and experience. Thanks to the Dogecoin Foundation for maintaining the ecosystem that enabled testnet experiments.
 
 \bibliographystyle{alpha}
 \bibliography{references}
