docs: Update author block formatting
- Author: J. Casey Wilson
- Affiliation: Independent Researcher, The Odenrider Group, LLC.
- Clean LaTeX formatting with proper author/affiliation separation

--- a/docs/academic_paper.tex
+++ b/docs/academic_paper.tex
@@ -36,9 +36,8 @@
 \title{PAT: Post-Quantum Signature Aggregation at Scale \\
 \large First Large-Scale Implementation with Testnet Validation}
 
-\author[1]{J. Casey Wilson \\
-Independent Researcher \\
-\affil[1]{Odenrider Group LLC}}
+\author[1]{J. Casey Wilson}
+\affil[1]{Independent Researcher, The Odenrider Group, LLC.}
 
 \date{\today}
 
